# Impractical_Python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
impractical_python/Chapter_01/: etaoin.py  pig_latin_practice.py  pseudonyms.json  pseudonyms_main_fixed.py
impractical_python/Chapter_07/: brute_force_cracker.py  safe_cracker.py  super_rats.py
impractical_python/Chapter_10/: galaxy_simulator.py  probability_of_detection.py
tests/: test_chapter_01.py  test_chapter_07.py
