[metadata]
name = impractical_python
description = projects from the book Impractical Python Projects by Lee Vaughan
author = Andrey Sigorskikh
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    impractical_python
install_requires =
    numpy>=1.23
    matplotlib>=3.6
python_requires = >=3.9
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.1
    pytest-cov>=4.0
    mypy>=0.981
    flake8>=4.0
    tox>=3.27

[options.package_data]
impractical_python = py.typed

[flake8]
max-line-length = 160